# HFI-2025-RAG

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
bff/: package-lock.json  package.json
bff/src/: index.ts
bff/src/middleware/: errorHandler.ts
bff/src/prompts/: chat.ts  compare.ts  country.ts
bff/src/python/: client.ts
bff/src/routes/: chat.ts  compare.ts  country.ts  documents.ts  health.ts  metadata.ts
bff/src/types/: index.ts
client/: package-lock.json  package.json
client/src/: App.tsx  constants.ts  index.css  theme.ts
documentation/: ingestion-pipeline.md  langgraph-agent.md  mcp-server.md
server/: TESTING.md  pyproject.toml
server/eval/: precision_eval.py
server/src/: config.py  main.py
server/src/api/: __init__.py  app.py  models.py
server/src/ingestion/: chunker.py  image_extractor.py  metadata_enricher.py  pdf_parser.py  pipeline.py  table_extractor.py
server/src/mcp/: server.py
server/src/rag/: __init__.py  graph.py  llm.py  schemas.py
server/src/rag/nodes/: analyzer.py  crud_handler.py  formatter.py  retriever.py  router.py
server/src/storage/: metadata_db.py  vector_store.py
server/src/utils/: countries.py  parameters.py
server/testing/: ingest_document.py  inspect_chunk.py  langgraph_intent.py  semantic_search.py
specification/: 01_project_overview.md  02_architecture.md  04_mcp_server.md  04_pdf_processing_pipeline.md  05_langgraph_agent.md  07_evaluation.md  08_postman_collection_skeleton.md  09_nodejs_bff.md  09_project_structure.md  10_react_frontend.md  TASKS.md  all.md
(+19 files in other folders)
